JumpScript/tests/baselines/reference/es5-commonjs3.errors.txt
tests/cases/compiler/es5-commonjs3.jump(2,12): error TS1216: Identifier expected. '__esModule' is reserved as an exported marker when transforming ECMAScript modules.


==== tests/cases/compiler/es5-commonjs3.jump (1 errors) ====
    export default "test";
    export var __esModule = 1;
               ~~~~~~~~~~
!!! error TS1216: Identifier expected. '__esModule' is reserved as an exported marker when transforming ECMAScript modules.
    